--- a/src/sass/page/_top-voice.scss
+++ b/src/sass/page/_top-voice.scss
@@ -10,8 +10,11 @@
 //トップお客様の声インナー
 .top-voice__inner {
   max-width: rem(540);
+  padding: 0 rem(25);
+  margin: 0 auto;
   @include mq("md") {
-    max-width: auto;
+    max-width: rem(1080);
+    padding: 0 rem(15);
   }
 }
 //トップお客様の声周り
