--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -55,7 +55,6 @@
   overflow-wrap: anywhere;
   font-size: rem(16);
   padding-bottom: rem(4);
-  font-weight: 500;
   line-height: 1.4375;
   border-bottom: solid rem(1) $green;
   font-weight: $bold;
@@ -91,4 +90,14 @@
   @include mq("md") {
     padding-top: rem(40);
   }
+}
+//
+.voice-card__category {
+  display: inline-block;
+  font-size: rem(12);
+  color: $green;
+  border: solid rem(1) $green;
+  line-height: 1.833333;
+  padding: rem(4) rem(12);
+  width: fit-content;
 }
