--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -39,3 +39,8 @@
   margin-top: 0;
   padding-top: rem(16);
 }
+.blog-card__time {
+  font-size: rem(12);
+  font-family: $second-font-family;
+  line-height: 1.5;
+}
