--- a/src/sass/page/_topCampaign.scss
+++ b/src/sass/page/_topCampaign.scss
@@ -1,14 +1,19 @@
 @use "global" as *;
 //トップキャンペーンセクション全体
-.top-campaign-wrapper {
+.topCampaign-wrapper {
   margin-top: rem(40);
   overflow: hidden;
   @include mq("md") {
     margin-top: rem(120);
   }
 }
+//トップキャンペーン、表示設定
+.topCampaign {
+  margin-right: calc(50% - 50vw);
+}
+
 //トップキャンペーンスライダー周り
-.top-campaign__slider-wrapper {
+.topCampaign__slider-wrapper {
   margin-top: rem(27);
   padding-bottom: rem(10);
   z-index: 10;
@@ -18,12 +23,12 @@
 }
 //スライダーボタンrelative用
 @include mq("md") {
-  .top-campaign__swiper-button-relative {
+  .topCampaign__swiper-button-relative {
     position: relative;
   }
 }
 //スライダーボタン周り
-.top-campaign__swiper-button-wrapper {
+.topCampaign__swiper-button-wrapper {
   display: none;
   @include mq("md") {
     position: absolute;
@@ -39,7 +44,7 @@
   }
 }
 //スライダーボタン左
-.top-campaign__swiper-button-prev::after {
+.topCampaign__swiper-button-prev::after {
   background-image: url(/assets/images/common/slider-left-arrow.png);
   content: "";
   background-size: cover;
@@ -52,7 +57,7 @@
   cursor: pointer;
 }
 //スライダーボタン右
-.top-campaign__swiper-button-next::after {
+.topCampaign__swiper-button-next::after {
   background-image: url(/assets/images/common/slider-right-arrow.png);
   content: "";
   background-size: cover;
@@ -65,7 +70,7 @@
   cursor: pointer;
 }
 /*キャンペーン各スライド
-.top-campaign__slide {
+.topCampaign__slide {
   box-shadow: rem(2) rem(2) rem(10) rgba($color: #000000, $alpha: 0.25);
   background-color: $white;
   opacity: 1;
@@ -77,7 +82,7 @@
     width: rem(333);
   }
 }*/
-.top-campaign__btn-wrapper {
+.topCampaign__btn-wrapper {
   margin-top: rem(30);
   text-align: center;
   padding-bottom: rem(5);
