--- a/src/sass/page/_top-blog.scss
+++ b/src/sass/page/_top-blog.scss
@@ -48,11 +48,11 @@
 //トップブログインナー
 .top-blog__inner {
   max-width: rem(540);
-  padding: 0 rem(25);
+  padding: 0 rem(15);
   margin: 0 auto;
   @include mq("md") {
-    max-width: rem(1080);
-    padding: 0 rem(15);
+    max-width: none;
+    padding: 0 rem(25);
   }
 }
 //トップブログカード周り
