--- a/src/sass/page/_top-voice.scss
+++ b/src/sass/page/_top-voice.scss
@@ -10,11 +10,11 @@
 //トップお客様の声インナー
 .top-voice__inner {
   max-width: rem(540);
-  padding: 0 rem(25);
+  padding: 0 rem(15);
   margin: 0 auto;
   @include mq("md") {
-    max-width: rem(1080);
-    padding: 0 rem(15);
+    max-width: none;
+    padding: 0 rem(25);
   }
 }
 //トップお客様の声周り
