--- a/src/sass/page/_top-blog.scss
+++ b/src/sass/page/_top-blog.scss
@@ -51,7 +51,7 @@
   padding: 0 rem(15);
   margin: 0 auto;
   @include mq("md") {
-    max-width: none;
+    max-width: rem(1080);
     padding: 0 rem(25);
   }
 }
