--- a/src/sass/module/_site-map.scss
+++ b/src/sass/module/_site-map.scss
@@ -8,6 +8,8 @@
   flex-direction: row;
   justify-content: space-around;
   column-gap: rem(16);
+  word-break: keep-all;
+  overflow-wrap: break-word;
   @include mq("md") {
     width: 100%;
     max-width: rem(1080);
