--- a/src/sass/module/_info.scss
+++ b/src/sass/module/_info.scss
@@ -63,3 +63,8 @@
   transform: translate(-50%, -50%);
   object-fit: cover;
 }
+//ボタン
+.info__btn-wrapper {
+  margin-top: rem(40);
+  text-align: center;
+}
