--- a/src/sass/page/_top-info.scss
+++ b/src/sass/page/_top-info.scss
@@ -11,11 +11,8 @@
 }
 .top-info__inner {
   max-width: rem(540);
-  padding: 0 rem(15);
-  margin: 0 auto;
   @include mq("md") {
     max-width: none;
-    padding: 0 rem(25);
   }
 }
 //ダイビング情報ボタン
@@ -23,4 +20,65 @@
   text-align: center;
   padding-bottom: rem(5);
   margin-top: rem(40);
+}
+.top-info__content-wrapper {
+  margin-top: rem(24);
+  @include mq("md") {
+    margin-top: rem(40);
+  }
+}
+//ダイビング情報コンテンツ
+.top-info__content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  gap: rem(24);
+  @include mq("md") {
+    flex-direction: row;
+    max-width: rem(1080);
+    gap: rem(48);
+  }
+}
+//ダイビング情報タイトル・テキスト周り
+@include mq("md") {
+  .top-info__texts {
+    align-content: center;
+  }
+}
+//ダイビング情報テキスト
+.top-info__text {
+  margin-top: rem(8);
+}
+//ダイビング情報タイトル
+.top-info__title {
+  font-size: rem(20);
+  line-height: 1.2;
+  padding-bottom: rem(4);
+  border-bottom: solid rem(1) $green;
+  @include mq("md") {
+    font-size: rem(24);
+  }
+}
+//ダイビング情報写真
+.top-info__img {
+  position: relative;
+  aspect-ratio: 540/356;
+  @include mq("md") {
+    aspect-ratio: 345/227;
+  }
+}
+.top-info__img > img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+}
+//ボタン
+.top-info__btn-wrapper {
+  margin-top: rem(40);
+  text-align: center;
 }
