--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -130,7 +130,7 @@
   }
 }
 //SP-navのインナー
-.header__sp-nav-inner {
+.header__scroll {
   overflow-y: scroll;
   overscroll-behavior: contain;
   height: inherit;
