--- a/src/sass/module/_canpaign-card.scss
+++ b/src/sass/module/_canpaign-card.scss
@@ -47,6 +47,9 @@
   padding: rem(4) rem(12);
   width: fit-content;
 }
+.campaign-card__title-wrapper {
+  margin: rem(4);
+}
 .campaign-card__title {
   overflow-wrap: anywhere;
   font-size: rem(16);
