--- a/src/sass/page/_top-voice.scss
+++ b/src/sass/page/_top-voice.scss
@@ -7,6 +7,18 @@
     margin-top: rem(145);
   }
 }
+.top-voice__cards {
+  margin-top: rem(40);
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: rem(40);
+  @include mq("md") {
+    margin-top: rem(30);
+    gap: rem(80) rem(40);
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
+  }
+}
 //トップお客様の声インナー
 .top-voice__inner {
   max-width: rem(540);
