--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -1,5 +1,5 @@
 @use "global" as *;
-//お問い合わせコンテンツ全体
+//お問い合わせセクション全体
 .contact-wrapper {
   position: relative;
   margin: rem(54) auto 0 auto;
@@ -7,14 +7,14 @@
     margin: rem(140) auto 0 auto;
   }
 }
-//お問い合わせインナー
+//お問い合わせセクションインナー
 .contact__inner {
   max-width: rem(540);
   @include mq("md") {
     max-width: rem(1080);
   }
 }
-//お問い合わせコンテンツインナー
+//お問い合わせ本体
 .contact__content-inner {
   text-align: center;
   align-items: center;
