--- a/src/sass/page/_topCampaign.scss
+++ b/src/sass/page/_topCampaign.scss
@@ -1,5 +1,5 @@
 @use "global" as *;
-//トップキャンペーンセクション全体
+//トップキャンペーンセクション余白
 .topCampaign-wrapper {
   margin-top: rem(40);
   overflow: hidden;
@@ -8,9 +8,16 @@
     margin-top: rem(120);
   }
 }
-//トップキャンペーン、表示設定
-.topCampaign {
+//トップキャンペーンスライダー
+.topCampaign__swiper {
   margin-right: calc(50% - 50vw);
+}
+//カードの幅
+.topCampaign__card {
+  width: rem(280);
+  @include mq("md") {
+    width: rem(333);
+  }
 }
 //トップキャンペーンスライダー周り
 .topCampaign__slider-wrapper {
