--- a/src/sass/module/_canpaign-card.scss
+++ b/src/sass/module/_canpaign-card.scss
@@ -37,8 +37,11 @@
   color: $green;
   border: solid rem(1) $green;
   line-height: 1.833333;
-  padding: rem(4) rem(12);
+  padding: rem(4) rem(11);
   width: fit-content;
+  @include mq("md") {
+    padding: rem(5) rem(16);
+  }
 }
 .campaign-card__title-wrapper {
   margin: rem(4);
@@ -63,7 +66,10 @@
   }
 }
 .campaign-card__text {
-  margin-top: rem(16);
+  margin-top: rem(4);
+  @include mq("md") {
+    margin-top: rem(13);
+  }
 }
 //キャンペーン値段
 .campaign-card__price-wrapper {
