--- a/src/sass/module/_site-map.scss
+++ b/src/sass/module/_site-map.scss
@@ -1,13 +1,13 @@
 @use "global" as *;
 //サイトマップ
 .site-map {
-  max-width: rem(500);
+  max-width: rem(345);
   margin: 0 auto;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  column-gap: rem(16);
+  column-gap: rem(7);
   word-break: keep-all;
   overflow-wrap: break-word;
   @include mq("md") {
@@ -36,8 +36,17 @@
   margin-top: rem(41);
   list-style: none;
 }
-.site-map__main-title--hamburger {
-  margin-top: 0;
+.site-map__main-title--layout {
+  margin-top: rem(0);
+  @include mq("md") {
+    margin-top: 0;
+  }
+}
+.site-map__main-title--sp {
+  margin-top: rem(40);
+  @include mq("md") {
+    margin-top: 0;
+  }
 }
 //リストマークつかないところ
 .site-map__sub-title {
