--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -3,7 +3,7 @@
   padding-top: rem(15);
   padding-left: rem(16);
   padding-right: rem(16);
-  padding-bottom: rem(24);
+  padding-bottom: rem(15);
   box-shadow: rem(2) rem(2) rem(10) rgba($color: #000000, $alpha: 0.25);
   background-color: $white;
   width: 100%;
@@ -94,10 +94,13 @@
 //
 .voice-card__category {
   display: inline-block;
+  padding: rem(3) rem(11);
   font-size: rem(12);
   color: $green;
   border: solid rem(1) $green;
   line-height: 1.833333;
-  padding: rem(4) rem(12);
   width: fit-content;
+  @include mq("md") {
+    padding: rem(4) rem(14);
+  }
 }
