--- a/src/sass/page/_top-price.scss
+++ b/src/sass/page/_top-price.scss
@@ -1,12 +1,12 @@
 @use "global" as *;
 //トップ料金セクション
 .top-price-wrapper {
-  padding: rem(82) 0;
+  padding: rem(82) 0 rem(77);
   background-color: $light-green;
   margin-top: rem(80);
   @include mq("md") {
-    margin-top: rem(140);
-    padding: rem(100) 0 rem(105) 0;
+    margin-top: rem(144);
+    padding: rem(100) 0 rem(98) 0;
     position: relative;
   }
 }
@@ -109,10 +109,10 @@
   @include mq("md") {
     display: block;
     position: absolute;
-    bottom: 4.7%;
+    bottom: 4.9%;
     left: calc(50% - min(48.4vw, 38.75rem));
     max-width: rem(437);
-    width: 30.7%;
+    width: 100%;
     z-index: 10;
   }
 }
