--- a/src/sass/page/_topCampaign.scss
+++ b/src/sass/page/_topCampaign.scss
@@ -6,6 +6,7 @@
   width: 100%;
   @include mq("md") {
     margin-top: rem(120);
+    position: relative;
   }
 }
 //トップキャンペーンスライダー
@@ -25,13 +26,7 @@
   padding-bottom: rem(10);
   z-index: 10;
   @include mq("md") {
-    margin-top: rem(44);
-  }
-}
-//スライダーボタンrelative用
-@include mq("md") {
-  .topCampaign__swiper-button-relative {
-    position: relative;
+    margin-top: rem(40);
   }
 }
 //スライダーボタン周り
@@ -43,7 +38,7 @@
     justify-content: space-between;
     flex-direction: row;
     top: 0%;
-    right: 0%;
+    right: calc(50% - min(37.5vw, 33.8rem));
     width: rem(240);
     height: rem(80);
     z-index: 5;
