--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -11,6 +11,14 @@
     padding: rem(80) 0;
   }
 }
+.footer__inner {
+  max-width: rem(540);
+  width: 100%;
+  margin: 0 auto;
+  @include mq("md") {
+    max-width: initial;
+  }
+}
 //フッターCodeUpsロゴ
 .footer__logo {
   width: rem(120);
