--- a/src/sass/module/_site-map.scss
+++ b/src/sass/module/_site-map.scss
@@ -5,7 +5,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   column-gap: rem(7);
   word-break: keep-all;
   overflow-wrap: break-word;
