--- a/src/sass/module/_top-info.scss
+++ b/src/sass/module/_top-info.scss
@@ -23,14 +23,14 @@
 }
 //ダイビング情報コンテンツ
 .top-info__content {
-  margin-top: rem(28);
+  margin: rem(28) auto 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   text-align: left;
   gap: rem(24);
   @include mq("md") {
-    margin-top: rem(40);
+    margin: rem(40) auto 0;
     flex-direction: row;
     max-width: rem(1080);
     gap: rem(48);
