--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -70,6 +70,11 @@
     border-right: solid rem(1) $green;
   }
 }
+//お問い合わせ、電話
+.contact__tel {
+  display: inline-block;
+  margin-top: rem(5);
+}
 //お問い合わせ地図
 .contact__map {
   position: relative;
