--- a/src/sass/page/_contact-wrapper.scss
+++ b/src/sass/page/_contact-wrapper.scss
@@ -14,14 +14,15 @@
   background-image: url(/assets/images/common/decoration-fish.png);
   top: rem(-10);
   right: calc(50% - min(46.4vw, 10.8rem));
-  width: rem(109);
+  max-width: rem(109);
+  width: 100%;
   height: rem(50);
   background-size: contain;
   background-repeat: no-repeat;
   @include mq("md") {
     top: rem(-40);
     right: calc(50% - min(46.4vw, 42rem));
-    width: rem(301);
+    max-width: rem(301);
     height: rem(138);
   }
 }
