--- a/src/sass/page/_top-blog-wrapper.scss
+++ b/src/sass/page/_top-blog-wrapper.scss
@@ -23,7 +23,8 @@
     display: block;
     top: rem(24);
     left: calc(50% - min(42.4vw, 38.7rem));
-    width: rem(437);
+    max-width: rem(437);
+    width: 100%;
     height: rem(201);
     background-size: contain;
     background-repeat: no-repeat;
