--- a/src/sass/page/_top-price-wrapper.scss
+++ b/src/sass/page/_top-price-wrapper.scss
@@ -19,7 +19,8 @@
     display: block;
     bottom: rem(59);
     left: calc(50% - min(43vw, 38.6rem));
-    width: rem(437);
+    max-width: rem(437);
+    width: 30%;
     height: rem(201);
     background-size: contain;
     background-repeat: no-repeat;
