--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -7,6 +7,8 @@
   background-color: rgba($color: $black, $alpha: 0.68);
   z-index: 9999;
   overscroll-behavior-y: contain;
+  top: 0;
+  left: 0;
   @include mq("md") {
     height: rem(90);
   }
