--- a/src/sass/module/_lower-FV.scss
+++ b/src/sass/module/_lower-FV.scss
@@ -1,32 +1,82 @@
 @use "global" as *;
 .lower-FV__img {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: rem(460);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url(/assets/sitemap-privacy-FV-sp.png);
+  background-image: url(/assets/images/common/aboutus-FV-sp.jpg); //仮
   @include mq("md") {
+    background-image: url(/assets/images/common/aboutus-FV.jpg); //仮
     height: rem(548);
-    background-image: url(/assets/sitemap-privacy-FV.png);
   }
 }
 .lower-FV__img h1 {
   position: absolute;
   top: rem(274);
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
   color: $white;
   font-size: rem(40);
-  text-align: center;
   @include mq("md") {
     color: $white;
     line-height: 1.25;
     font-size: rem(80);
   }
 }
-.lower-FV__img--fish {
-  background-image: url(/assets/sitemap-privacy-FV-sp.png);
+.lower-FV__img--campaign {
+  background-image: url(/assets/images/common/campaign-FV-sp.png);
   @include mq("md") {
-    background-image: url(/assets/sitemap-privacy-FV.png);
+    background-image: url(/assets/images/common/campaign-FV.png);
+  }
+}
+.lower-FV__img--about {
+  background-image: url(/assets/images/common/aboutus-FV-sp.jpg);
+  @include mq("md") {
+    background-image: url(/assets/images/common/aboutus-FV.jpg);
+  }
+}
+.lower-FV__img--info {
+  background-image: url(/assets/images/common/info-FV-sp.jpg);
+  @include mq("md") {
+    background-image: url(/assets/images/common/info-FV.jpg);
+  }
+}
+.lower-FV__img--blog {
+  background-image: url(/assets/images/common/blog-FV-sp.png);
+  @include mq("md") {
+    background-image: url(/assets/images/common/blog-FV.png);
+  }
+}
+.lower-FV__img--voice {
+  background-image: url(/assets/images/common/voice-FV-sp.png);
+  @include mq("md") {
+    background-image: url(/assets/images/common/voice-FV.png);
+  }
+}
+.lower-FV__img--price {
+  background-image: url(/assets/images/common/price-FV-sp.jpg);
+  @include mq("md") {
+    background-image: url(/assets/images/common/price-FV.png);
+  }
+}
+.lower-FV__img--FAQ {
+  background-image: url(/assets/images/common/FAQ-FV-sp.png);
+  @include mq("md") {
+    background-image: url(/assets/images/common/FAQ-FV.jpg);
+  }
+}
+.lower-FV__img--contact {
+  background-image: url(/assets/images/common/contact-FV-sp.jpg);
+  @include mq("md") {
+    background-image: url(/assets/images/common/contact-FV.png);
+  }
+}
+.lower-FV__img--fish {
+  background-image: url(/assets/images/common/sitemap-privacy-FV-sp.png);
+  @include mq("md") {
+    background-image: url(/assets/images/common/sitemap-privacy-FV.png);
   }
 }
