--- a/src/sass/module/_bread.scss
+++ b/src/sass/module/_bread.scss
@@ -1,8 +1,10 @@
 @use "global" as *;
 .bread {
+  font-size: rem(14);
   margin-top: rem(8);
+}
+.bread__inner {
   display: flex;
   flex-direction: row;
   gap: rem(8);
-  font-size: rem(14);
 }
