--- a/src/sass/module/_btn.scss
+++ b/src/sass/module/_btn.scss
@@ -83,3 +83,37 @@
 .btn:hover span::after {
   border: rem(1.3) solid $green;
 }
+//404ページのボタン
+.btn--white {
+  background-color: $white;
+  color: $green;
+}
+.btn--white:hover {
+  color: $white;
+}
+//ボタン二重線
+.btn--white::before {
+  border: rem(1) solid $white;
+}
+//ボタン矢印
+.btn--white span {
+  background: $green;
+}
+.btn--white span:hover {
+  color: $white;
+}
+.btn--white span::after {
+  border: rem(1.8) solid $green;
+}
+//アニメーション
+.btn--white::after {
+  background-color: $green;
+  border: rem(1) solid $white;
+  color: $white;
+}
+.btn--white:hover span {
+  background-color: $white;
+}
+.btn--white:hover span::after {
+  border: rem(1.3) solid $white;
+}
