--- a/src/sass/page/_contact-wrapper.scss
+++ b/src/sass/page/_contact-wrapper.scss
@@ -7,11 +7,17 @@
     margin: rem(140) auto 0 auto;
   }
 }
+.contact-wrapper--price {
+  margin: rem(80) auto 0 auto;
+  @include mq("md") {
+    margin: rem(100) auto 0 auto;
+  }
+}
 .contact-wrapper::after {
   position: absolute;
   content: "";
   display: block;
-  background-image: url(/assets/images/common/decoration-fish.png);
+  background-image: url(/assets/images/common/decoration-fish.svg);
   top: rem(-100);
   right: calc(50% - min(46.4vw, 10.8rem));
   max-width: rem(109);
@@ -25,4 +31,7 @@
     max-width: rem(301);
     height: rem(138);
   }
+}
+.contact-wrapper--price::after {
+  top: 0;
 }
