--- a/src/sass/module/_canpaign-card.scss
+++ b/src/sass/module/_canpaign-card.scss
@@ -56,6 +56,9 @@
   flex-shrink: 0;
   margin-top: auto;
 }
+.campaign-card__title--side {
+  text-align: center;
+}
 .campaign-card__contents {
   margin-top: auto;
   margin-bottom: rem(16);
