--- a/src/sass/module/_info.scss
+++ b/src/sass/module/_info.scss
@@ -1,11 +1,20 @@
 @use "global" as *;
 
+.info__inner {
+  max-width: rem(540);
+
+  @include mq("md") {
+    max-width: rem(1130);
+  }
+}
+
 .info__tabs {
   display: flex;
   gap: rem(20);
   justify-content: space-between;
 }
-.info__tabs label {
+
+.info__button {
   display: block;
   padding: rem(10) 0;
   background: $light-green;
@@ -18,56 +27,72 @@
   justify-content: center;
   align-items: center;
   gap: rem(8);
+  word-break: keep-all;
+  overflow-wrap: break-word;
+
   @include mq("md") {
     padding: rem(13) 0;
     max-width: rem(300);
   }
 }
-.info__tabs input:checked + label {
+
+.info__tabs .is-btn-active {
   background: $green;
   color: $white;
 }
-.info__tabs input {
-  display: none;
-}
+
+
 .info__tab-icon {
   display: none;
+
   @include mq("md") {
     width: rem(64);
     height: auto;
+    display: block;
   }
 }
+
 .info__content {
+  display: none;
   border: solid rem(1) $green;
   padding: rem(24);
-  display: flex;
   flex-direction: column;
   gap: rem(8);
   background-color: $white;
   opacity: 1;
+
   @include mq("md") {
     flex-direction: row;
     gap: rem(48);
     align-items: center;
   }
 }
+
+.is-content-active {
+  display: flex;
+}
+
 .info__texts {
   width: 100%;
+
   @include mq("md") {
     width: 50%;
   }
 }
+
 .info__img {
   margin-top: rem(8);
   aspect-ratio: 297/189;
   width: 100%;
+
   @include mq("md") {
     margin-top: 0;
     aspect-ratio: 492/313;
     width: 50%;
   }
 }
-.info > img {
+
+.info>img {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -76,12 +101,14 @@
   transform: translate(-50%, -50%);
   object-fit: cover;
 }
+
 .info__title {
   font-size: rem(24);
   font-weight: $bold;
   padding-bottom: rem(8);
   border-bottom: solid rem(1) $green;
 }
+
 .info__text {
   margin-top: rem(8);
 }
