--- a/src/sass/module/_voice.scss
+++ b/src/sass/module/_voice.scss
@@ -1,26 +1,14 @@
 @use "global" as *;
+
 .voice__cards {
-  margin-top: rem(40);
+  margin-top: rem(38);
 }
-.voice__tabs {
-  display: flex;
-  gap: rem(21);
-}
-.voice__tabs label {
-  display: block;
-  padding: rem(6) 0;
-  width: rem(162);
-  background: $white;
-  color: $black;
-  box-sizing: border-box;
-  text-align: center;
-  cursor: pointer;
-  border: solid rem(1) $green;
-}
-.voice__tabs input:checked + label {
-  background: $green;
-  color: $white;
-}
-.voice__tabs input {
-  display: none;
+
+.voice__pager-wrapper {
+  margin-top: rem(84);
+
+  @include mq("md") {
+
+    margin-top: rem(73);
+  }
 }
