--- a/src/sass/module/_canpaign-card.scss
+++ b/src/sass/module/_canpaign-card.scss
@@ -9,14 +9,18 @@
   display: flex;
   flex-direction: column;
 }
+
 .campaign-card__img {
   position: relative;
-  aspect-ratio: 280/188;
+  aspect-ratio: 280/186;
+
   @include mq("md") {
     aspect-ratio: 333/223;
   }
 }
-.campaign-card__img > img {
+
+
+.campaign-card__img>img {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -25,12 +29,27 @@
   transform: translate(-50%, -50%);
   object-fit: cover;
 }
+
 .campaign-card__body {
   padding: rem(16) rem(16) 0 rem(16);
+
   @include mq("md") {
     padding: rem(24) rem(16) rem(0) rem(16);
   }
 }
+
+.campaign-card__body--lower {
+  padding: rem(16) rem(24) 0;
+
+  @include mq("md") {
+    padding: rem(22) rem(23) 0;
+  }
+}
+
+.campaign-card__body--side {
+  padding-top: rem(12);
+}
+
 .campaign-card__category {
   display: inline-block;
   font-size: rem(12);
@@ -39,13 +58,16 @@
   line-height: 1.833333;
   padding: rem(4) rem(11);
   width: fit-content;
+
   @include mq("md") {
     padding: rem(5) rem(16);
   }
 }
+
 .campaign-card__title-wrapper {
   margin: rem(4);
 }
+
 .campaign-card__title {
   overflow-wrap: anywhere;
   font-size: rem(16);
@@ -55,37 +77,73 @@
   font-weight: $bold;
   flex-shrink: 0;
   margin-top: auto;
+
+  @include mq("md") {
+    font-size: rem(16);
+  }
 }
+
+.campaign-card__title--lower {
+  font-size: rem(16);
+
+  @include mq("md") {
+    font-size: rem(24);
+    padding-bottom: rem(3);
+  }
+}
+
 .campaign-card__title--side {
   text-align: center;
 }
+
 .campaign-card__contents {
   margin-top: auto;
   margin-bottom: rem(16);
   text-align: center;
+
   @include mq("md") {
     margin-top: auto;
     line-height: 1.5;
+    margin-bottom: rem(0);
   }
 }
+
 .campaign-card__text {
   margin-top: rem(4);
+  font-size: rem(14);
+
   @include mq("md") {
     margin-top: rem(13);
+    font-size: rem(16);
   }
 }
+
+.campaign-card__text--lower {
+  @include mq("md") {
+    margin-top: rem(20);
+  }
+
+}
+
+.campaign-card__text--side {
+  font-size: rem(14);
+}
+
 //キャンペーン値段
 .campaign-card__price-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: baseline;
+  gap: rem(43);
 }
+
 @include mq("md") {
   .campaign-card__price-wrapper {
     margin-top: rem(0);
   }
 }
+
 //キャンペーン値段変更前
 .campaign-card__pre-price {
   line-height: 1;
@@ -100,17 +158,71 @@
     font-size: rem(24);
   }
 }
+
 //キャンペーン値段変更後
 .campaign-card__after-price {
-  margin-left: rem(16);
   font-size: rem(32);
   font-weight: $bold;
   font-family: $second-font-family;
   color: $green;
-}
-@include mq("md") {
-  .campaign-card__after-price {
-    margin-left: rem(24);
+
+  @include mq("md") {
     font-size: rem(40);
+  }
+}
+
+
+@include mq("md") {
+  .campaign__detail {
+    padding: 0 rem(23);
+    margin-top: rem(12);
+  }
+}
+
+//下層キャンペーンのカード
+.campaign-card__detail {
+  display: none;
+
+  @include mq("md") {
+    display: block;
+    margin-top: rem(12);
+    padding: 0 rem(25);
+    text-align: start;
+  }
+}
+
+.campaign-card__date {
+  display: none;
+
+  @include mq("md") {
+    display: block;
+    margin-top: rem(30);
+    color: $green;
+    font-weight: $bold;
+    text-align: center;
+    font-family: $title-font-family;
+  }
+}
+
+.campaign-card__reserve {
+  display: none;
+
+  @include mq("md") {
+    display: block;
+    margin-top: rem(2);
+    color: $green;
+    text-align: center;
+    font-size: rem(14);
+  }
+
+}
+
+.campaign-card__btn-wrapper {
+  display: none;
+
+  @include mq("md") {
+    display: block;
+    margin-top: rem(16);
+    margin-bottom: rem(40);
   }
 }
