--- a/src/sass/module/_contact-form.scss
+++ b/src/sass/module/_contact-form.scss
@@ -1,27 +1,43 @@
 @use "global" as *;
+
 .contact-form__inner {
   width: 100%;
+
   @include mq("md") {
     max-width: rem(700);
+    width: 100%;
   }
 }
+
+.contact-form__form {
+  width: 100%;
+
+  @include mq("md") {
+    max-width: rem(700);
+    margin: 0 auto;
+  }
+}
+
 .contact-form__item {
   display: flex;
   padding: rem(24) 0;
   flex-direction: column;
+
   @include mq("md") {
     flex-direction: row;
-    justify-content: space-between;
     padding: rem(40) 0;
   }
 }
+
 .contact-form__label {
   font-weight: $bold;
   width: 100%;
+
   @include mq("md") {
     max-width: rem(220);
   }
 }
+
 .contact-form__label span {
   display: inline-block;
   width: rem(61);
@@ -32,17 +48,159 @@
   font-size: rem(12);
   margin-left: rem(8);
 }
+
 .contact-form__item {
   border-bottom: solid rem(1) $green;
 }
-.contact-form__textarea {
+
+.contact-form__text {
+  margin-top: rem(16);
   width: 100%;
   border: solid rem(1) $green;
+  height: rem(40);
+  padding-left: rem(8);
+
   @include mq("md") {
     max-width: rem(480);
+    margin-top: 0;
+    width: 71%;
   }
 }
-.contact-form__checkbox {
+
+.contact-form__text.error {
+  border: solid rem(1) $red;
+  background-color: rgba($color: $red, $alpha: 0.2);
+}
+
+.contact-form__textarea {
+  margin-top: rem(16);
+  width: 100%;
+  border: solid rem(1) $green;
+  height: rem(200);
+  padding-left: rem(8);
+
+  @include mq("md") {
+    max-width: rem(480);
+    margin-top: 0;
+    width: 71%;
+  }
+}
+
+.contact-form__textarea.error {
+  border: solid rem(1) $red;
+  background-color: rgba($color: $red, $alpha: 0.2);
+}
+
+.contact-form__checkboxes {
+  margin-top: rem(16);
   display: flex;
   flex-direction: column;
+
+  @include mq("md") {
+    margin-top: 0;
+  }
+}
+
+input[type=checkbox] {
+  display: inline-block;
+  border: solid rem(1) $green;
+  width: rem(14);
+  height: rem(14);
+}
+
+.contact-form__checkbox {
+  display: block;
+}
+
+.control input:checked+.control__indicator {
+  background: blue;
+}
+
+.contact-form__contents {
+  margin-top: rem(16);
+  border: solid rem(1) $green;
+  font-size: rem(12);
+  padding-left: rem(8);
+  position: relative;
+  height: rem(40);
+
+  @include mq("md") {
+    margin-top: 0;
+    max-width: rem(480);
+    width: 71%;
+    height: rem(30);
+  }
+}
+
+.contact-form__contents::after {
+  position: absolute;
+  content: "";
+  display: block;
+  background-image: url(/assets/images/common/contact-form-triangle.png);
+  //top: rem(-23);
+  //left: calc(50% - min(44.5vw, 10.4rem));
+  max-width: rem(16);
+  width: 100%;
+  height: rem(16);
+  background-size: contain;
+  background-repeat: no-repeat;
+
+}
+
+.contact-form__content {
+  border: solid rem(1) $green;
+  font-size: rem(12);
+  padding: rem(16);
+
+}
+
+.contact-form__doui {
+  margin: rem(40) auto 0;
+  max-width: rem(280);
+  width: 100%;
+
+  @include mq("md") {
+    margin-top: rem(80);
+    max-width: none;
+    text-align: center;
+  }
+}
+
+.contact-form__btn-wrapper {
+  margin-top: rem(24);
+  text-align: center;
+
+  @include mq("md") {
+    margin-top: rem(40);
+  }
+}
+
+//エラー
+.contact-form__error {
+  display: none;
+  text-align: center;
+  color: $red;
+}
+
+//お問い合わせ完了
+.contact-form__success-wrapper {
+  margin-top: rem(52);
+  text-align: center;
+  word-break: keep-all;
+  overflow-wrap: break-word;
+
+  @include mq("md") {
+    margin-top: rem(150);
+  }
+}
+
+.contact-form__success-title {
+  font-size: rem(16);
+  font-weight: $normal;
+}
+
+.contact-form__success {
+  margin-top: rem(40);
+  text-wrap: nowrap;
+
 }
