--- a/src/sass/module/_info.scss
+++ b/src/sass/module/_info.scss
@@ -14,7 +14,8 @@
   justify-content: space-between;
 }
 
-.info__button {
+.info__tab {
+  position: relative;
   display: block;
   padding: rem(10) 0;
   background: $light-green;
@@ -31,44 +32,89 @@
   overflow-wrap: break-word;
 
   @include mq("md") {
-    padding: rem(13) 0;
+    padding: rem(26) 0;
     max-width: rem(300);
   }
 }
 
-.info__tabs .is-btn-active {
+.info__tab::before {
+  display: none;
+
+  @include mq("md") {
+    position: absolute;
+    content: "";
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: block;
+    top: rem(12);
+    height: rem(64);
+    width: rem(64);
+  }
+}
+
+.info__tab--license::before {
+  background-image: url(/assets/images/common/info-lisence-icon.png);
+  left: rem(30);
+}
+
+.info__tab--fun::before {
+  background-image: url(/assets/images/common/info-fun-icon.png);
+  left: rem(17);
+}
+
+.info__tab--trial::before {
+  background-image: url(/assets/images/common/info-trial-icon.png);
+  left: rem(30);
+}
+
+.info__tab--license.js-active::before {
+  background-image: url(/assets/images/common/info-lisence-icon--white.png);
+}
+
+.info__tab--fun.js-active::before {
+  background-image: url(/assets/images/common/info-fun-icon--white.png);
+}
+
+.info__tab--trial.js-active::before {
+  background-image: url(/assets/images/common/info-trial-icon--white.png);
+}
+
+.info__tab.js-active {
   background: $green;
   color: $white;
 }
 
-
-.info__tab-icon {
-  display: none;
+.info__tab-text {
+  font-size: rem(14);
+  margin: 0 rem(16);
 
   @include mq("md") {
-    width: rem(64);
-    height: auto;
-    display: block;
+    margin-left: rem(89);
+    font-size: rem(24);
   }
 }
 
 .info__content {
   display: none;
   border: solid rem(1) $green;
-  padding: rem(24);
+  padding: rem(17) rem(24) rem(24);
   flex-direction: column;
   gap: rem(8);
   background-color: $white;
   opacity: 1;
+  margin-top: rem(13);
 
   @include mq("md") {
     flex-direction: row;
     gap: rem(48);
+    padding: rem(24);
     align-items: center;
+    margin-top: rem(24);
   }
 }
 
-.is-content-active {
+.info__content.js-active {
   display: flex;
 }
 
@@ -81,12 +127,10 @@
 }
 
 .info__img {
-  margin-top: rem(8);
   aspect-ratio: 297/189;
   width: 100%;
 
   @include mq("md") {
-    margin-top: 0;
     aspect-ratio: 492/313;
     width: 50%;
   }
@@ -105,8 +149,12 @@
 .info__title {
   font-size: rem(24);
   font-weight: $bold;
-  padding-bottom: rem(8);
+  padding-bottom: rem(2);
   border-bottom: solid rem(1) $green;
+
+  @include mq("md") {
+    padding-bottom: rem(8);
+  }
 }
 
 .info__text {
