--- a/src/sass/module/_no-page.scss
+++ b/src/sass/module/_no-page.scss
@@ -1,54 +1,77 @@
 @use "global" as *;
+
 .no-page {
   background-color: $green;
   color: $white;
   position: relative;
 }
+
 .no-page::after {
   position: absolute;
   content: "";
   background-image: url(/assets/images/common/404img.png);
-  top: rem(0);
-  left: calc(50% - min(42.4vw, 38.7rem));
-  max-width: rem(328);
+  top: rem(-9);
+  left: calc(50% - min(46vw, 11rem));
+  max-width: rem(345);
   width: 100%;
-  height: rem(293);
+  height: rem(345);
   background-size: contain;
   background-repeat: no-repeat;
+  z-index: -1;
+
   @include mq("md") {
-    max-width: rem(665);
+    max-width: rem(698);
     height: rem(698);
+    left: calc(50% - min(37.6vw, 33.7rem));
   }
 }
 
-.no-page h1 {
+.no-page__title-wrapper {
+  margin-top: rem(60);
+
+  @include mq("md") {
+    margin-top: rem(134);
+  }
+
+}
+
+.no-page__title {
   font-family: $second-font-family;
   text-align: center;
   font-size: rem(80);
   letter-spacing: 0.5em;
   font-weight: $normal;
-  line-height: 1.2;
+  line-height: 1;
+  margin-left: rem(37);
+
   @include mq("md") {
     font-size: rem(160);
+    margin-left: rem(78);
   }
 }
+
 .no-page__bread {
-  margin-top: rem(80);
+  margin-top: rem(87);
+
   @include mq("md") {
-    margin-top: rem(100);
+    margin-top: rem(98);
   }
 }
+
 .no-page__texts {
-  margin-top: 0;
+  margin-top: rem(3);
   text-align: center;
+
   @include mq("md") {
-    margin-top: rem(24);
+    margin-top: rem(39);
   }
 }
+
 .no-page__btn-wrapper {
-  margin-top: rem(40);
+  margin-top: rem(42);
   text-align: center;
+
   @include mq("md") {
-    margin-top: rem(80);
+    margin-top: rem(81);
   }
 }
