--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -1,11 +1,14 @@
 @use "global" as *;
+
 .price__menu-wrapper {
   margin-top: rem(80);
   position: relative;
+
   @include mq("md") {
     margin-top: rem(160);
   }
 }
+
 .price__menu-wrapper::after {
   position: absolute;
   content: "";
@@ -17,6 +20,7 @@
   height: rem(50);
   background-size: contain;
   background-repeat: no-repeat;
+
   @include mq("md") {
     top: rem(-40);
     left: calc(50% - min(46.4vw, 42rem));
@@ -24,84 +28,97 @@
     height: rem(138);
   }
 }
+
 .price__menu {
   width: 100%;
   margin-top: rem(40);
+  align-items: center;
+
   @include mq("md") {
     margin-top: rem(80);
   }
 }
+
 .price__menu:first-child {
   margin-top: 0;
 }
+
 .price__menu {
   display: flex;
   flex-direction: column;
   justify-content: center;
+
   @include mq("md") {
     flex-direction: row;
   }
 }
-.price__ {
+
+.price__title-wrapper {
   background-color: $green;
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   gap: rem(8);
   color: $white;
   justify-content: center;
   align-items: center;
   width: 100%;
   padding: rem(8) 0;
+  max-width: rem(540);
+
   @include mq("md") {
     padding: 0;
     max-width: rem(200);
     flex-direction: column;
   }
 }
+
 .price__title {
   text-align: center;
   font-size: rem(16);
 }
+
 .price__title-img {
   width: rem(24);
+
   @include mq("md") {
     width: rem(64);
     margin: rem(8) auto 0;
   }
 }
+
 .price__lists {
-  max-width: rem(346);
   width: 100%;
+  max-width: rem(540);
+
   @include mq("md") {
-    max-width: rem(402);
+    width: 100%;
+    max-width: rem(502);
   }
 }
+
 .price__list {
   display: flex;
   flex-direction: row;
 }
+
 .price__name {
-  max-width: rem(240);
-  width: 69.37%;
+  width: 67.7%;
   text-align: start;
   border: solid rem(1) $green;
   padding: rem(18) 0 rem(18) rem(16);
+
   @include mq("md") {
-    max-width: rem(340);
     text-align: center;
-    width: 68.12%;
   }
 }
+
 .price__yen {
-  max-width: rem(106);
-  width: 30.63%;
+  width: 32.3%;
   text-align: end;
   border-top: solid rem(1) $green;
   border-right: solid rem(1) $green;
   border-bottom: solid rem(1) $green;
   padding: rem(18) rem(18) rem(16) 0;
-  @include mq("md") {
-    max-width: rem(162);
-    width: 31.89%;
-  }
+
+  @include mq("md") {}
 }
