--- a/src/sass/module/_privacy.scss
+++ b/src/sass/module/_privacy.scss
@@ -1,22 +1,84 @@
 @use "global" as *;
-.privacy__title-wrapper {
+
+.privacy {
   margin-top: rem(50);
+
   @include mq("md") {
     margin-top: rem(150);
   }
+
 }
+
+.privacy__inner {
+  width: 100%;
+
+  @include mq("md") {
+    max-width: rem(850);
+  }
+}
+
 .privacy__title-wrapper {
-  margin-top: rem(40);
+  position: relative;
+
 }
+
+.privacy__title-wrapper::before {
+  position: absolute;
+  content: "";
+  display: block;
+  background-image: url(/assets/images/common/decoration-fish-right.svg);
+  top: rem(-23);
+  left: calc(50% - min(45.5vw, 10.7rem));
+  max-width: rem(117);
+  width: 100%;
+  height: rem(55);
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  @include mq("md") {
+    top: rem(-69);
+    left: calc(50% - min(43.1vw, 38.8rem));
+    max-width: rem(301);
+    height: rem(138);
+  }
+}
+
+.privacy__title {
+  font-size: rem(24);
+
+  @include mq("md") {
+    font-size: rem(32);
+  }
+
+}
+
 .privacy__lists {
   list-style: decimal;
+  margin-top: rem(0);
 }
+
+.privacy__lists--top {
+  list-style: decimal;
+  margin-top: rem(31);
+}
+
 .privacy__list {
-  margin-left: rem(16);
+  margin-left: rem(24);
 }
+
+.privacy__text-wrapper {
+  margin-top: rem(37);
+  line-height: 2;
+
+  @include mq("md") {
+    margin-top: rem(41);
+  }
+}
+
 .privacy__text {
   margin-top: rem(32);
 }
+
 .privacy__text:first-child {
   margin-top: 0;
 }
