--- a/src/sass/module/_site-map.scss
+++ b/src/sass/module/_site-map.scss
@@ -1,4 +1,5 @@
 @use "global" as *;
+
 //サイトマップ
 .site-map {
   margin: 0 auto;
@@ -6,9 +7,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  column-gap: rem(7);
+  column-gap: rem(17);
   word-break: keep-all;
   overflow-wrap: break-word;
+
   @include mq("md") {
     width: 100%;
     flex-direction: row;
@@ -16,6 +18,16 @@
     column-gap: rem(120);
   }
 }
+
+.site-map--lower {
+  width: 100%;
+  column-gap: rem(28);
+
+  @include mq("md") {
+    justify-content: space-between;
+  }
+}
+
 //SPのときに2つに分かれるようにするため
 @include mq("md") {
   .site-map__sp-layout {
@@ -24,6 +36,15 @@
     column-gap: rem(120);
   }
 }
+
+@include mq("md") {
+  .site-map__sp-layout--lower {
+    row-gap: 2.5rem;
+    display: flex;
+    column-gap: rem(144);
+  }
+}
+
 //リストマーク付きのところ
 .site-map__main-title {
   background: url(/assets/images/common/site-map__list-icon.png) no-repeat 0 0;
@@ -34,32 +55,40 @@
   margin-top: rem(40);
   list-style: none;
 }
+
 .site-map__main-title--black {
   background: url(/assets/images/common/site-map__list-icon--black.png) no-repeat 0 0;
 }
+
 .site-map__main-title--layout {
   margin-top: rem(0);
+
   @include mq("md") {
     margin-top: rem(41);
   }
 }
+
 //リストマークつかないところ
 .site-map__sub-title {
   margin-left: rem(22);
   margin-top: rem(24);
   line-height: 1.125;
 }
+
 //PCの時並べ替え
 @include mq("md") {
   .site-map__main--order1 {
     order: 1;
   }
+
   .site-map__main--order2 {
     order: 2;
   }
+
   .site-map__main--order3 {
     order: 3;
   }
+
   .site-map__main--order4 {
     order: 4;
   }
