--- a/src/sass/module/_tab.scss
+++ b/src/sass/module/_tab.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
 .tab {
-    display: block;
+    display: inline-block;
     padding: rem(6) 0;
     width: rem(162);
     background: $white;
@@ -10,9 +10,18 @@
     text-align: center;
     cursor: pointer;
     border: solid rem(1) $green;
+    opacity: 1;
+
+    @include mq("md") {
+        padding: rem(6) 0;
+    }
 }
 
-.is-button-active {
+.tab.is-button-active {
     background: $green;
     color: $white;
+}
+
+.campaign-card__category.is-hide {
+    display: none;
 }
