--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -1,4 +1,5 @@
 @use "global" as *;
+
 .voice-card {
   padding-top: rem(15);
   padding-left: rem(16);
@@ -8,10 +9,17 @@
   background-color: $white;
   width: 100%;
   opacity: 1;
+
   @include mq("md") {
     padding: rem(24);
   }
 }
+
+.voice-card--lower {
+  padding-bottom: rem(16);
+
+}
+
 //お客様の声、お客様情報
 .voice-card__info {
   display: flex;
@@ -19,13 +27,16 @@
   column-gap: rem(13);
   align-items: end;
   justify-content: space-between;
+
   @include mq("md") {
     column-gap: rem(16);
   }
 }
+
 //お客様の声、年齢、性別周り
 .voice-card__customer-data-wrapper {
   width: 100%;
+
   @include mq("md") {
     width: 58%;
   }
@@ -41,15 +52,18 @@
     padding-bottom: rem(6);
   }
 }
+
 //お客様の声、年齢
 .voice-card__customer-age {
   font-size: rem(12);
   line-height: 1.5;
 }
+
 //
 .voice-card__title-wrapper {
   margin-top: rem(4);
 }
+
 //
 .voice-card__title {
   overflow-wrap: anywhere;
@@ -60,21 +74,25 @@
   font-weight: $bold;
   flex-shrink: 0;
   margin-top: auto;
+
   @include mq("md") {
     font-size: rem(24);
   }
 }
+
 //
 .voice-card__img {
   position: relative;
   aspect-ratio: 180/140;
   width: 100%;
+
   @include mq("md") {
     aspect-ratio: 150/117;
     width: 38%;
   }
 }
-.voice-card__img > img {
+
+.voice-card__img>img {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -83,14 +101,17 @@
   transform: translate(-50%, -50%);
   object-fit: cover;
 }
+
 //
 .voice-card__text {
   padding-top: rem(16);
   margin-top: 0;
+
   @include mq("md") {
     padding-top: rem(40);
   }
 }
+
 //
 .voice-card__category {
   display: inline-block;
@@ -100,6 +121,7 @@
   border: solid rem(1) $green;
   line-height: 1.833333;
   width: fit-content;
+
   @include mq("md") {
     padding: rem(4) rem(14);
   }
