--- a/src/sass/page/_contact-wrapper.scss
+++ b/src/sass/page/_contact-wrapper.scss
@@ -1,30 +1,95 @@
 @use "global" as *;
+
 //お問い合わせセクション余白余白
 .contact-wrapper {
   position: relative;
   margin: rem(63) auto 0 auto;
+
   @include mq("md") {
     margin: rem(140) auto 0 auto;
   }
 }
+
+.contact-wrapper--info {
+  margin: rem(90) auto 0 auto;
+
+  @include mq("md") {
+    margin: rem(140) auto 0 auto;
+  }
+
+}
+
+.contact-wrapper--FAQ {
+  margin: rem(91) auto 0 auto;
+
+  @include mq("md") {
+    margin: rem(140) auto 0 auto;
+  }
+
+}
+
+.contact-wrapper--campaign {
+  margin: rem(91) auto 0 auto;
+
+  @include mq("md") {
+    margin: rem(140) auto 0 auto;
+  }
+}
+
+.contact-wrapper--privacy {
+  margin: rem(91) auto 0 auto;
+
+  @include mq("md") {
+    margin: rem(140) auto 0 auto;
+  }
+}
+
+.contact-wrapper--voice {
+  margin: rem(91) auto 0 auto;
+
+  @include mq("md") {
+    margin: rem(140) auto 0 auto;
+  }
+}
+
+.contact-wrapper--terms {
+  margin: rem(92) auto 0 auto;
+
+  @include mq("md") {
+    margin: rem(140) auto 0 auto;
+  }
+}
+
 .contact-wrapper--price {
   margin: rem(80) auto 0 auto;
+
   @include mq("md") {
     margin: rem(100) auto 0 auto;
   }
 }
+
+.contact-wrapper--site-map {
+  margin: rem(91) auto 0 auto;
+
+  @include mq("md") {
+    margin: rem(140) auto 0 auto;
+  }
+
+}
+
 .contact-wrapper::after {
   position: absolute;
   content: "";
   display: block;
-  background-image: url(/assets/images/common/decoration-fish.svg);
-  top: rem(-100);
+  background-image: url(/assets/images/common/decoration-fish.png);
+  top: rem(-10);
   right: calc(50% - min(46.4vw, 10.8rem));
   max-width: rem(109);
   width: 100%;
   height: rem(50);
   background-size: contain;
   background-repeat: no-repeat;
+
   @include mq("md") {
     top: rem(-40);
     right: calc(50% - min(46.4vw, 42rem));
@@ -32,6 +97,15 @@
     height: rem(138);
   }
 }
+
 .contact-wrapper--price::after {
   top: 0;
+}
+
+.contact-wrapper--layout::after {
+  top: rem(-11);
+
+  @include mq("md") {
+    top: rem(-11);
+  }
 }
