--- a/src/sass/page/_info-wrapper.scss
+++ b/src/sass/page/_info-wrapper.scss
@@ -1,22 +1,31 @@
 @use "global" as *;
+
 .info-wrapper {
   margin-top: rem(121);
   position: relative;
+
   @include mq("md") {
     margin-top: rem(150);
   }
 }
-.info-wrapper::after {
-  background-image: url(/assets/images/common/decoration-fish-right.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
+
+.info-wrapper::before {
+  position: absolute;
   content: "";
   display: block;
-  height: rem(138);
-  left: calc(50% - min(38.4vw, 25.8rem));
-  max-width: rem(310);
-  position: absolute;
-  top: rem(-50);
+  background-image: url(/assets/images/common/decoration-fish-right.svg);
+  top: rem(-94);
+  left: calc(50% - min(45.5vw, 10.7rem));
+  max-width: rem(117);
   width: 100%;
-  z-index: -1;
+  height: rem(55);
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  @include mq("md") {
+    top: rem(-69);
+    left: calc(50% - min(43.1vw, 38.8rem));
+    max-width: rem(301);
+    height: rem(138);
+  }
 }
